--- a/Water_Features/Water_Features.csproj
+++ b/Water_Features/Water_Features.csproj
@@ -24,85 +24,104 @@
 	<!--Imports must be after PropertyGroup block-->
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
+	<ItemGroup>
+	  <None Remove="StyleCop\stylecop.json" />
+	</ItemGroup>
+	<ItemGroup>
+	  <AdditionalFiles Include="StyleCop\stylecop.json" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<Reference Include="cohtml.Net">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\cohtml.Net.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.AssetPipeline">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.AssetPipeline.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.IO">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.IO.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.Localization">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.Localization.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.Mathematics">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.Mathematics.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.Mono.Cecil">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.Mono.Cecil.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.PSI.Common">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.PSI.Common.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.UI">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.UI.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.UI.Binding">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.UI.Binding.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Game">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.Core">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.Logging">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Colossal.IO.AssetDatabase">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Unity.Burst.Unsafe">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Unity.Burst.Unsafe.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Unity.InputSystem">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Unity.InputSystem.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="UnityEngine">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\UnityEngine.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="UnityEngine.CoreModule">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Unity.Burst">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Unity.Collections">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Unity.Entities">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="Unity.Mathematics">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="UnityEngine.IMGUIModule">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 	</ItemGroup>
 
 	<ItemGroup>
 		<Reference Update="System">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Update="System.Core">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Update="System.Data">
-			<Private>false</Private>
+			<Private>False</Private>
 		</Reference>
 	</ItemGroup>
 
@@ -116,11 +135,17 @@
 	  <Folder Include="Components\" />
 	  <Folder Include="Prefabs\" />
 	  <Folder Include="Settings\" />
-	  <Folder Include="StyleCop\" />
 	  <Folder Include="Systems\" />
 	  <Folder Include="Tools\" />
 	  <Folder Include="Utils\" />
 	  <Folder Include="UI\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -143,4 +168,40 @@
 		<XmlPoke XmlInputPath="$(PublishConfigurationPath)" Value="$([System.IO.File]::ReadAllText($(ProjectDir)/LongDescription.md))" Query="//LongDescription" />
 		<XmlPoke XmlInputPath="$(PublishConfigurationPath)" Value="$([System.IO.File]::ReadAllText($(ProjectDir)/ChangeLog.md))" Query="//ChangeLog" />
 	</Target>
+
+	<ItemGroup>
+	  <Reference Update="System.Drawing">
+	    <Private>False</Private>
+	  </Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Update="System.IO.Compression.FileSystem">
+	    <Private>False</Private>
+	  </Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Update="System.Numerics">
+	    <Private>False</Private>
+	  </Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Update="System.Runtime.Serialization">
+	    <Private>False</Private>
+	  </Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Update="System.Xml">
+	    <Private>False</Private>
+	  </Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Update="System.Xml.Linq">
+	    <Private>False</Private>
+	  </Reference>
+	</ItemGroup>
 </Project>
