--- a/Water_Features/Water_Features.csproj
+++ b/Water_Features/Water_Features.csproj
@@ -25,10 +25,36 @@
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
 	<ItemGroup>
+	  <None Remove="l10n\de-DE.csv" />
+	  <None Remove="l10n\en-US.csv" />
+	  <None Remove="l10n\es-ES.csv" />
+	  <None Remove="l10n\fr-FR.csv" />
+	  <None Remove="l10n\it-IT.csv" />
+	  <None Remove="l10n\ja-JP.csv" />
+	  <None Remove="l10n\ko-KR.csv" />
+	  <None Remove="l10n\pl-PL.csv" />
+	  <None Remove="l10n\pt-BR.csv" />
+	  <None Remove="l10n\ru-RU.csv" />
+	  <None Remove="l10n\zh-HANS.csv" />
+	  <None Remove="l10n\zh-HANT.csv" />
 	  <None Remove="StyleCop\stylecop.json" />
 	</ItemGroup>
 	<ItemGroup>
 	  <AdditionalFiles Include="StyleCop\stylecop.json" />
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Include="l10n\de-DE.csv" />
+	  <EmbeddedResource Include="l10n\en-US.csv" />
+	  <EmbeddedResource Include="l10n\es-ES.csv" />
+	  <EmbeddedResource Include="l10n\fr-FR.csv" />
+	  <EmbeddedResource Include="l10n\it-IT.csv" />
+	  <EmbeddedResource Include="l10n\ja-JP.csv" />
+	  <EmbeddedResource Include="l10n\ko-KR.csv" />
+	  <EmbeddedResource Include="l10n\pl-PL.csv" />
+	  <EmbeddedResource Include="l10n\pt-BR.csv" />
+	  <EmbeddedResource Include="l10n\ru-RU.csv" />
+	  <EmbeddedResource Include="l10n\zh-HANS.csv" />
+	  <EmbeddedResource Include="l10n\zh-HANT.csv" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -131,10 +157,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="l10n\" />
 	  <Folder Include="Components\" />
 	  <Folder Include="Prefabs\" />
-	  <Folder Include="Settings\" />
 	  <Folder Include="Systems\" />
 	  <Folder Include="Tools\" />
 	  <Folder Include="Utils\" />
@@ -174,7 +198,7 @@
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	  <None Update="l10n\l10n.csv">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
 
