--- a/Water_Features/Water_Features.csproj
+++ b/Water_Features/Water_Features.csproj
@@ -29,9 +29,13 @@
 	  <None Remove="l10n\de-DE.csv" />
 	  <None Remove="l10n\en-US.csv" />
 	  <None Remove="l10n\es-ES.csv" />
+	  <None Remove="l10n\fr-FR.csv" />
+	  <None Remove="l10n\ko-KR.csv" />
 	  <None Remove="l10n\pl-PL.csv" />
 	  <None Remove="l10n\pt-BR.csv" />
+	  <None Remove="l10n\ru-RU.csv" />
 	  <None Remove="l10n\zh-HANS.csv" />
+	  <None Remove="l10n\zh-HANT.csv" />
 	  <None Remove="StyleCop\stylecop.json" />
 	</ItemGroup>
 	<ItemGroup>
@@ -41,9 +45,13 @@
 	  <EmbeddedResource Include="l10n\de-DE.csv" />
 	  <EmbeddedResource Include="l10n\en-US.csv" />
 	  <EmbeddedResource Include="l10n\es-ES.csv" />
+	  <EmbeddedResource Include="l10n\fr-FR.csv" />
+	  <EmbeddedResource Include="l10n\ko-KR.csv" />
 	  <EmbeddedResource Include="l10n\pl-PL.csv" />
 	  <EmbeddedResource Include="l10n\pt-BR.csv" />
+	  <EmbeddedResource Include="l10n\ru-RU.csv" />
 	  <EmbeddedResource Include="l10n\zh-HANS.csv" />
+	  <EmbeddedResource Include="l10n\zh-HANT.csv" />
 	</ItemGroup>
 
 	<ItemGroup>
