--- a/Water_Features/Water_Features.csproj
+++ b/Water_Features/Water_Features.csproj
@@ -22,6 +22,7 @@
 	  <None Remove="l10n\en-US.csv" />
 	  <None Remove="l10n\es-ES.csv" />
 	  <None Remove="l10n\fr-FR.csv" />
+	  <None Remove="l10n\it-IT.csv" />
 	  <None Remove="l10n\ko-KR.csv" />
 	  <None Remove="l10n\pl-PL.csv" />
 	  <None Remove="l10n\pt-BR.csv" />
@@ -38,6 +39,7 @@
 	  <EmbeddedResource Include="l10n\en-US.csv" />
 	  <EmbeddedResource Include="l10n\es-ES.csv" />
 	  <EmbeddedResource Include="l10n\fr-FR.csv" />
+	  <EmbeddedResource Include="l10n\it-IT.csv" />
 	  <EmbeddedResource Include="l10n\ko-KR.csv" />
 	  <EmbeddedResource Include="l10n\pl-PL.csv" />
 	  <EmbeddedResource Include="l10n\pt-BR.csv" />
